--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h2
                 data-aos="fade-left"
                 data-aos-delay="500"
-                data-aos-duration="600">Hi i'm <span>Aigail Palting</span></h2>
+                data-aos-duration="600">Hi i'm <span>ABIGAIL PALTING</span></h2>
                 <h1 id="typing-text"
                 data-aos="fade-left"
                 data-aos-delay="600"
@@ -99,4 +99,5 @@
 <script>
     AOS.init();
 </script>
+
 </html>
