--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
 	
 	<div class="left-section">
 		<div class="profile">
-		<img src="15afbd0d-c2d8-48e3-9bd9-cc518f88a258.jpg" class="profile-img">
+		<img src="1ID .jpg" class="profile-img">
 		<div class="blue-box"></div>
 		</div>
 		<h2 class="name">ABIGAIL JOYCE <br><span>PALTING</span></h2>
@@ -175,4 +175,5 @@
 </body>
 
 </html>
+
 
